# spd_antraege

./: .gitignore  CLAUDE.md  README.md  docker-compose.dev.yaml  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
data/taxonomy/: extracted_topics_raw.json  sample_300.json  topics.yaml
deploy/: README.md
deploy/pis/: docker-compose.yaml  init-db.sql  install.sh
docs/: business_repo_gotchas.md
docs/states/: README.md  baden_wuerttemberg.md  bayern.md  berlin.md  brandenburg.md  bremen.md  bund.md  hamburg.md  hessen.md  mecklenburg_vorpommern.md  niedersachsen.md  nrw.md  nrw_extraction_report.md  rlp.md  sachsen.md  sachsen_anhalt.md  schleswig_holstein.md  thueringen.md
evals/: README.md  retrieval_questions.yaml  run.py  run_retrieval.py  select_fixtures.py
evals/fixtures/: baseline_scores.json  (+1 more)
frontend/: .prettierrc  astro.config.mjs  components.json  package-lock.json  package.json
handoffs/: 001-handoff-haystack-bearings-2026-07-04.md
planning/: 001-retrieval-eval-rag-hardening.md  002-search-mode-routing.md  003-production-search-mode-verification.md  004_haystack_derived_parquet_ingestion.md
scraper/: README.md  normalize.py  pipeline.py
scripts/: audit_cvtx.py  backfill_content_hash.py  convert_to_docx.py  convert_to_pdf.py  sync_antraege.py  trend_analysis.py  verify_beschlusslage.py
tests/: conftest.py  test_chunking_pipeline.py  test_corpus.py  test_dynamic_taxonomy.py  test_extraction.py  test_feeds.py  test_haystack_components.py  test_haystack_indexing.py  test_mcp_rag_server.py  test_search.py  test_seo.py
(+4306 files in other folders)
