[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spdbe"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pyyaml>=6.0",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "click>=8.0",
    "anthropic>=0.40",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
]
infra = [
    "neo4j>=5.0",
    "psycopg[binary]>=3.0",
    "httpx>=0.25",
]
haystack = [
    "haystack-ai>=2.4",
    "elasticsearch-haystack>=1.0",
    "sentence-transformers>=2.2",
    "nltk>=3.9",
]
frontend = [
    "fastapi>=0.100",
]

[project.scripts]
spdbe = "spdbe.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires running infrastructure (Neo4j, PostgreSQL, Elasticsearch)",
    "contract: requires Anthropic API key for LLM output validation",
    "haystack: requires haystack optional dependencies",
]
